infer/tests/codetoanalyze/cpp/errors/constructors/constructor_with_body.cpp
../../frontend/constructors/constructor_with_body.cpp